# hydra-pool

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  config-signet.toml  config.toml  dist-workspace.toml  hydrapool.service  justfile
.github/workflows/: build-debian.yml  build-docker.yml  docker-build.yml  release.yml
ansible/: README.md  hydrapool.yml  inventory.ini
ansible/templates/: bitcoin-mainnet.conf.j2  bitcoin-signet.conf.j2  bitcoin-testnet4.conf.j2  bitcoind.service.j2  ckpool-hydra-mainnet.json.j2  ckpool-hydra-signet.json.j2  ckpool-hydra-testnet4.json.j2  ckpool.service.j2  hydrapool-config.toml.j2  hydrapool.server.j2  p2pool-config.toml.j2
docker/: .env.example  Dockerfile.bitcoind  Dockerfile.ckpool  Dockerfile.ckpool-hydra-solo  Dockerfile.hydrapool  Dockerfile.hydrapool-ckpool  Dockerfile.p2pool  Dockerfile.prometheus  README.adoc  README.md  config-example.toml  cpuminer-startup.sh  docker-compose.dev.yml  docker-compose.yml
docker/prometheus/: prometheus.yml  prometheus.yml~
docker/signet/: bitcoin-signet.conf  ckpool-hydra-signet.json
docker/testnet4/: bitcoin-testnet4.conf  ckpool-hydra-testnet4.json
prometheus/: prometheus.yml
prometheus/grafana/dashboards/: pool.json
prometheus/grafana/provisioning/dashboards/: dashboards.yml
signet/: ckpool-hydra-signet.json
src/: main.rs
testing/: hardware-tests.html
