[package]
name = "hydrapool"
version = "0.0.1"
edition = "2024"
rust-version = "1.88.0"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
tokio = { version = "1.0", features = ["full"] }
p2poolv2_lib = { git = "https://github.com/pool2win/p2pool-v2", package = "p2poolv2_lib", rev = "5442241" }
stratum = { git = "https://github.com/pool2win/p2pool-v2", package = "stratum", rev = "5442241" }
bitcoindrpc = { git = "https://github.com/pool2win/p2pool-v2", package = "bitcoindrpc", rev = "5442241" }
