[package]
name = "hydrapool"
version = "0.0.1"
edition = "2024"
rust-version = "1.88.0"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
tokio = { version = "1.0", features = ["full"] }
p2poolv2_lib = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_lib", tag = "hydrapool.v0.3.0" }
p2poolv2_cli = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_cli", tag = "hydrapool.v0.3.0" }
p2poolv2_api = { git = "https://github.com/p2poolv2/p2poolv2", package = "p2poolv2_api", tag = "hydrapool.v0.3.0" }
bitcoindrpc = { git = "https://github.com/p2poolv2/p2poolv2", package = "bitcoindrpc", tag = "hydrapool.v0.3.0" }

[[bin]]
name = "hydrapool"
test = false
bench = false

[[bin]]
name = "hydrapool_cli"
test = false
bench = false
